--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -23,6 +23,8 @@
   PB_Architect_Of_The_New_Reich:0 "Architect of the New Reich"
   PB_Architect_Of_The_New_Reich_2:0 "Architect of the New Reich"
   PB_Resilient_To_The_Cold:0 "Resilient to the Cold"
+  PB_Father_of_All_Germans:0 "Father Of All Germans"
+  PB_Father_of_All_Germans_tt:0 "  - §RDeath Before Dishonour!§!"
 
   ##########################
   # STATE MODIFIERS
@@ -43,6 +45,11 @@
   PB_PRS_Strengthen_The_Party_tt:0 "A number of new ministers will be available to recruit:\n\n"
   PB_PRS_Concord_With_Faith_tt:0 "\n§gOur national identity will be§! §HUpgraded!§!\n\n"
   PRS_spacing:0 " \n"
+  PB_PRS_The_Memel_Convention_tt:0 "\nShould Russia agree we will receive §YMemel§! and the culture of Memel will change to §YBaltic-German§!"
+  PB_PRS_Seek_New_Finacial_Partners_tt:0 "For every of the following countries that have greater than 70 opinion of Prussia, is either despot, reactionary, or neo-imperialist, you will gain one off-map military factory.\n\nThese countries include:\n   - [FRA.GetFlag] §YFrance§!\n   - [RUS.GetFlag] §YRussia§!\n   - [IST.GetFlag] §YItaly§!\n   - [SPR.GetFlag] §YSpain§!"
+  PB_PRS_Promote_Europeanism_tt:0 "Unlocks:  £GFX_legitimacy   §CEuropean Unity Camps§! occupation law that can only be used in occupied state in Europe.\n\nThis occupation law grants more compliance gain and has a small resistance debuff associated with it.\n\n"
+  PB_PRS_The_Reich_In_A_New_Age_tt:0 "The §YPost-War§! tree for Prussia will load. This will replace the old tree so any focuses you haven't completed will be gone for the remainder of this campaign."
+  PRS_Demand_state_tt:0 "\nThe is a §Y50/50§! chance that Russia outright accepts our demands, or that they demand industrial compensation in the form of one civilian factory, per state request. The AI will never refuse your demands however there is the option for them to do so if Russia is played by another human player. When they agree to our demands state control will be transfered to us and we will immediately core said state.\n"
 
   ##########################
   # MECHANICS
@@ -56,6 +63,10 @@
   PRS_Invite_French_Reactionary_Theorists:0 "Invite French Reactionary Theorists"
   PRS_Invite_Italian_Reactionary_Theorists:0 "Invite Italian Reactionary Theorists"
   PRS_Invite_Russian_Reactionary_Theorists:0 "Invite Russian Reactionary Theorists"
+  PRS_Demand_Hinterpommern:0 "Demand Hinterpommern"
+  PRS_Demand_Pommern:0 "Demand Pommern"
+  PRS_Demand_Mecklenburg:0 "Demand Mecklenburg"
+  PRS_Demand_Ostmark:0 "Demand Ostmark"
 
   PB_PRS_The_Origin_Of_Our_Race_tt:0 "\n§gUnlocks the ability to £PRS_shovel §HExcavate§! sites across the globe in the pursuit of creating a state accepted view towards the history of our peoples. You will be able to improve the §YÜbermensch§! spirit through excavations.§!\n\n"
   PB_PRS_Origin_Of_Our_People:0 "Excavation Sites"
@@ -91,12 +102,25 @@
   PRS_Race_Origin:0 "Übermensch"
 
   ##########################
+  # OCCUPATION LAWS
+  ##########################
+  
+  PRS_European_Unity_Camps:0 "European Unity Camps"
+
+  ##########################
   # IDEAS
   ##########################
 
   PB_Living_Under_Germanys_Shadow:0 "Living Under Germany's Shadow"
   PB_Living_Under_Germanys_Shadow_desc:0 "Prussia has remained for much of it's history as the "little brother" to the once then prestigious Austrian Empire, being seen as the less incapable nation of the two and always being two steps behind in terms of industrial capability and societal development. This has remained true for most of modern history, becoming more apparent with the Empire effectively becoming the European hegemony post Great War. Though Europe is a far different place, the circumstances that allowed the Austrians to grow cannot be replicated in todays climate. Alternative options such as Neo-Imperialism are the only choice if one seeks to expand, an option not open to the United Kingdoms Of Germany."
   
+  PB_Living_Under_Germanys_Shadow_2:0 "Living Under Germany's Shadow"
+  PB_Living_Under_Germanys_Shadow_2_desc:0 "Prussia has remained for much of it's history as the "little brother" to the once then prestigious Austrian Empire, being seen as the less incapable nation of the two and always being two steps behind in terms of industrial capability and societal development. This has remained true for most of modern history, becoming more apparent with the Empire effectively becoming the European hegemony post Great War. Though Europe is a far different place, the circumstances that allowed the Austrians to grow cannot be replicated in todays climate. Alternative options such as Neo-Imperialism are the only choice if one seeks to expand, an option not open to the United Kingdoms Of Germany."
+
+  PB_The_New_Germany:0 "The New Germany"
+
+  PB_In_The_Shadow_of_Prussia:0 "In The Shadow Of Prussia"
+
   PB_PRS_Prussonationalism:0 "Prussonationalism"
   PB_PRS_Prussonationalism_desc:0 "Prussonationalism is a unique form of ultranationalist doctrine birthed in Prussia in the aftermath of the Revolutions of the 1920s. In many ways, it is a synthesis of traditional Prussian martial values with modern far-right economic doctrine. The ideology primarily pushes for extreme ultra-traditionalism and anti-leftism, though conversely retaining a sort of ethnic pluralism to keep the not inconsiderable Polish, Russian and Baltic minorities from revolt."
 
@@ -128,6 +152,11 @@
   PB_PRS_Urbanize_The_Wilds_2:0 "Unity Through Sacrifice"
 
   PB_PRS_Youth_Programs:0 "Youth Programs"
+
+  PB_PRS_Anti_Jacobin_Crusade:0 "Anti-Jacobin Crusade"
+
+  PB_PRS_Industrial_Compensation:0 "Industrial Compensation"
+  PB_PRS_RUS_Industrial_Compensation:0 "Industrial Compensation"
 
   ##########################
   # Ministers/Generals/Tech Teams
@@ -386,3 +415,50 @@
   Prussian.7.t:0 "The Last King Of Prussia"
   Prussian.7.d:0 "" 
   Prussian.7.a:0 "Off with their head!"
+  Prussian.8.t:0 "The Memel Convention"
+  Prussian.8.d:0 "" 
+  Prussian.8.a:0 "Give the Prussians Memel."
+  Prussian.8.b:0 "Who are they to demand anything?"
+  Prussian.9.t:0 "The Russians Agree"
+  Prussian.9.d:0 "" 
+  Prussian.9.a:0 "Honestly didn't think they would say yes."
+  Prussian.10.t:0 "The Russians Refuse"
+  Prussian.10.d:0 "" 
+  Prussian.10.a:0 "Damn Russians!"
+  Prussian.11.t:0 "The Prussians Demand Control of Berlin Territory"
+  Prussian.11.d:0 "" 
+  Prussian.11.a:0 "Give it to them for free."
+  Prussian.11.b:0 "Demand Industrial Compensation."
+  Prussian.11.c:0 "Not in a thousand years."
+  Prussian.12.t:0 "Russia Agrees To Our Demands"
+  Prussian.12.d:0 "" 
+  Prussian.12.a:0 "Wait really?"
+  Prussian.13.t:0 "Russia Demands Compensation"
+  Prussian.13.d:0 "" 
+  Prussian.13.a:0 "How unsurprising."
+  Prussian.14.t:0 "Russia Rejects Our Demands"
+  Prussian.14.d:0 "" 
+  Prussian.14.a:0 "WHAT!"
+  Prussian.15.t:0 "The Prussians Demand Control of Berlin Territory"
+  Prussian.15.d:0 "" 
+  Prussian.15.a:0 "Give it to them for free."
+  Prussian.15.b:0 "Demand Industrial Compensation."
+  Prussian.15.c:0 "Not in a thousand years."
+  Prussian.16.t:0 "The Prussians Demand Control of Berlin Territory"
+  Prussian.16.d:0 "" 
+  Prussian.16.a:0 "Give it to them for free."
+  Prussian.16.b:0 "Demand Industrial Compensation."
+  Prussian.16.c:0 "Not in a thousand years."
+  Prussian.17.t:0 "The Prussians Demand Control of Berlin Territory"
+  Prussian.17.d:0 "" 
+  Prussian.17.a:0 "Give it to them for free."
+  Prussian.17.b:0 "Demand Industrial Compensation."
+  Prussian.17.c:0 "Not in a thousand years."
+
+  ##########################
+  # COSMETIC TAGS
+  ##########################
+
+  GREATER_PRS:0 "Greater Prussian Reich"
+  GREATER_PRS_DEF:0 "the Greater Prussian Reich"
+  GREATER_PRS_ADJ:0 "Prussian"
