a bunch of new stuff (AME and HOL)

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -19,6 +19,10 @@ PB_ENG_Stock_Crisis_tooltip:0 "§YThe London Stock Crisis has occurred.§!"
 ENG_General_Election_Completed_tooltip:0 "§YThe General Election has been completed.§!"
 AME_western_agriculture_decisions_tt:0 "£decision_icon_small Unlocks Decisions to Subsidize Farming in the West"
 
+PB_Cultures_remove_Dixie:0 "§YOld Dixie§! will §Rno longer be considered§! as an accepted culture of [ROOT.GetNameDef]"
+
+AME_Freedman_Support_US_tt:0 "Freedman Militas §Gwill rise up against the South§! in case of another Dixie Rebellion"
+
 ##########################
 # PARTIES
 ##########################
@@ -687,13 +691,19 @@ PB_AME_Listen_To_Halsey_desc:0 "The Prime Minister has been working closely with
 PB_AME_Address_The_Southern_Issue:0 "Address The Southern Issue"
 PB_AME_Address_The_Southern_Issue_desc:0 "In the United Commonwealth, the issue of segregation policies in the American South is a pressing concern. The government is actively working to address the problem, recognizing that segregation is a violation of basic human rights."
 PB_AME_Overstep_Our_Boundaries:0 "Overstep Our Boundaries"
-PB_AME_Overstep_Our_Boundaries_desc:0 "By deliberately antagonizing the Southern populist bloc, we can gain leverage that would allow us to further our political goals in the South."
+PB_AME_Overstep_Our_Boundaries_desc:0 "The Dixie Supporters in the South can not be considered our citiziens any longer. Anyone who participates in this rascist, disgusting uprising is considered an enemy of the states. They will soon learn what that means.\n\nHunt them down. Show no restraint. All limits are off."
 PB_AME_Friends_With_Benefits:0 "Friends With Benefits"
 PB_AME_Friends_With_Benefits_desc:0 "The Freedmen defense militias may be dubiously legal, but they're a kind of dubiously legal group we can work with. Their help will be integral in helping the Commonwealth combat the rampant racism and slavery in the South."
+PB_AME_Support_Reformists:0 "Supporters in the South"
+PB_AME_Support_Reformists_desc:0 "Not every Dixie is a misguided fool. The young and educated, the old and wise and those with a kind heart do not follow the old rascist teachings. However these people have to realize that doing nothing equals supporting the evil cause. In life there is no neutrality you have to choose a side."
 PB_AME_Outlaw_Dixie_Militias:0 "Outlaw Dixie Militias"
 PB_AME_Outlaw_Dixie_Militias_desc:0 "The United Commonwealth has taken a bold step to outlaw all Southern militias in response to rising tensions in the region. The government sees these groups as a threat to the peace and security of the nation and a potential source of violence against minority groups. The move has been met with controversy and pushback from some Southern politicians who argue that the militias are necessary for protection against crime and terrorism. Despite these objections, the United Commonwealth remains committed to enforcing the new law and ensuring that all citizens are protected under the law."
 PB_AME_Dial_Up_The_Heat:0 "Dial Up The Heat"
 PB_AME_Dial_Up_The_Heat_desc:0 "The Southern provinces have been given preferential treatment for far too long, and it's time to really press our luck."
+PB_AME_Dixie_Rebellion_Begun:0 "The Second Southern Rebellion"
+PB_AME_Dixie_Rebellion_Begun_desc:0 "The Second Southern Rebellion has begun and this time we shall show no mercy. They will have no compromise."
+PB_AME_Dixie_Crushed:0 "Dixie Crushed"
+PB_AME_Dixie_Crushed_desc:0 "The Rebellion has been crushed. Rather then getting away with their crimes the Dixie Supports will face consequences for their betrayal and pay for them for several years."
 PB_AME_The_American_Marine_Corps:0 "The American Marine Corps"
 PB_AME_The_American_Marine_Corps_desc:0 "The United Commonwealth has recently created a new military branch called the Royal Marine Corps. This highly trained unit is designed to operate in any environment, from land to sea, and can be deployed quickly to respond to threats both domestically and abroad. The Royal Marine Corps is made up of elite soldiers who have undergone rigorous training, and they are equipped with the latest technology and weaponry. The creation of this new military branch demonstrates the United Commonwealth's commitment to maintaining a strong and capable defense force, capable of protecting the Commonwealth's interests both at home and abroad."
 
@@ -2055,6 +2065,9 @@ AME_BBC_Stab_VH:0 "§WRegional Stability:§! §GVery High§!"
 AME_BBC_Stab_H:0 "§WRegional Stability:§! §GHigh§!"
 AME_BBC_Stab_L:0 "§WRegional Stability:§! §RLow§!"
 AME_BBC_Stab_VL:0 "§WRegional Stability:§! §RVery Low§!"
+
+
+AME_Dixie_Unrest:0 "§RDixie Unrest§!"
 
 AME_New_England_Stab_Very_High_tt:0 "£GFX_territory_icon  New England Regional Stability: \n§GVery Stable§!"
 AME_New_England_Stab_High_tt:0 "£GFX_territory_icon  New England Regional Stability: \n§GStable§!"
