--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -225,22 +225,22 @@
  SPR_cn_ADJ:0 "Spanish"
  SPR_an_ADJ:0 "Spanish"
 
- HOL_ni:0 "Republic Of The Netherlands"
- HOL_ni_DEF:0 "Republic Of The Netherlands"
- HOL_ds:0 "Republic Of The Netherlands"
- HOL_ds_DEF:0 "Republic Of The Netherlands"
- HOL_rc:0 "Republic Of The Netherlands"
- HOL_rc_DEF:0 "Republic Of The Netherlands"
- HOL_an:0 "Republic Of The Netherlands"
- HOL_an_DEF:0 "Republic Of The Netherlands"
- HOL_cn:0 "Republic Of The Netherlands"
- HOL_cn_DEF:0 "Republic Of The Netherlands"
- HOL_lb:0 "Republic Of The Netherlands"
- HOL_lb_DEF:0 "Republic Of The Netherlands"
- HOL_ss:0 "Republic Of The Netherlands"
- HOL_ss_DEF:0 "Republic Of The Netherlands"
- HOL_jc:0 "Union Republic Of The Netherlands"
- HOL_jc_DEF:0 "Union Of The Netherlands"
+ HOL_ni:0 "Republic Of the Netherlands"
+ HOL_ni_DEF:0 "Republic Of the Netherlands"
+ HOL_ds:0 "Republic Of the Netherlands"
+ HOL_ds_DEF:0 "Republic Of the Netherlands"
+ HOL_rc:0 "Republic Of the Netherlands"
+ HOL_rc_DEF:0 "Republic Of the Netherlands"
+ HOL_an:0 "Republic Of the Netherlands"
+ HOL_an_DEF:0 "Republic Of the Netherlands"
+ HOL_cn:0 "Republic Of the Netherlands"
+ HOL_cn_DEF:0 "Republic Of the Netherlands"
+ HOL_lb:0 "Republic Of the Netherlands"
+ HOL_lb_DEF:0 "Republic Of the Netherlands"
+ HOL_ss:0 "Republic Of the Netherlands"
+ HOL_ss_DEF:0 "Republic Of the Netherlands"
+ HOL_jc:0 "Union Republic Of the Netherlands"
+ HOL_jc_DEF:0 "Union Of the Netherlands"
  HOL_ni_ADJ:0 "Dutch"
  HOL_rc_ADJ:0 "Dutch"
  HOL_lb_ADJ:0 "Dutch"
