--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -28,6 +28,8 @@ PB_Dixie_States_Resistance:0 "Every Old Dixie State gains §RDixie Unrest§!"
 
 AME_Freedman_Support_US_tt:0 "Freedman Militas §Gwill rise up against the South§! in case of another Dixie Rebellion"
 
+AME_Bleeding_South_disabled_tt:0 "§GThe Rebellion has been prevented§! - The Bleeding South will not be active anymore"
+
 ##########################
 # PARTIES
 ##########################
@@ -2144,6 +2146,10 @@ AME_Increase_Comp_West_Florida:0 "Increase Compliance In West Florida"
 AME_Increase_Comp_Taliaferro:0 "Increase Compliance In Taliaferro"
 AME_Increase_Comp_Bailey:0 "Increase Compliance In Bailey"
 AME_Stall_for_Time_BS:0 "Stall for Time"
+AME_Crush_Before_it_Begins:0 "Crush the Uprising before it begins"
+AME_Install_Blockade:0 "Begin an arms blockade around the South"
+AME_Install_Blockade_desc:0 "We have to make sure that no other foreign power supports the traitors in the South, a blockade must be established even if will cause many to switch sides."
+AME_Anti_Dixie_Campaign:0 "Promote Anti-Dixie Campaigns"
 
 # Occupation
 AME_Martial_Law:0 "Commonwealth Martial Law"
