--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -2158,6 +2158,8 @@ AME_Martial_Law:0 "Commonwealth Martial Law"
 PB_AME_Dixie_Rebellion:0 "The Dixie Uprising"
 PB_FSA_No_Or_Never:0 "Now Or Never"
 
+PB_Idea_FSA_War_of_Independence:0 "War against Tyranny"
+
 # Country Flags
 Bleeding_South_Disabled:0 "The Bleeding South Is Not Active"
 Bleeding_South_Enabled:0 "The Bleeding South Is Active"
