Fixed Localisation Texts Layouts (GUI)

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -61,13 +61,13 @@ AME_Freedmen_Support_Government:0 "The £UC_SI_Freedmen §YFreedmen§! §Gsuppor
 AME_Freedmen_Neutral_Government:0 "The £UC_SI_Freedmen §YFreedmen§! are §Yneutral§! toward us | §Y[?AME.AME_Freedmen_Support]%§!"
 AME_Freedmen_Dislike_Government:0 "The £UC_SI_Freedmen §YFreedmen§! do not §Rsupport§! us | §R[?AME.AME_Freedmen_Support]%§!"
 
-AME_Freedmen_Not_Radicalized:0 "The §YFreedmen§! are not §Gradicalized§! | §G[?AME.AME_Freedmen_Radicalization]%§!"
-AME_Freedmen_Neutral_Radicalism:0 "The §YFreedmen§! are §Yneutral§! towards radicalism | §Y[?AME.AME_Freedmen_Radicalization]%§!"
-AME_Freedmen_Radicalized:0 "The §YFreedmen§! are §Rradicalized§! | §R[?AME.AME_Freedmen_Radicalization]%§!"
-
-AME_Southerners_Not_Radicalized:0 "The §YSoutherners§! are not §Gradicalized§! | §G[?AME.AME_Dixie_Radicalization]%§!"
-AME_Southerners_Neutral_Radicalism:0 "The §YSoutherners§! are §Yneutral§! towards radicalism | §Y[?AME.AME_Dixie_Radicalization]%§!"
-AME_Southerners_Radicalized:0 "The  §YSoutherners§! are §Rradicalized§! | §R[?AME.AME_Dixie_Radicalization]%§!"
+#AME_Freedmen_Not_Radicalized:0 "The §YFreedmen§! are not §Gradicalized§! | §G[?AME.AME_Freedmen_Radicalization]%§!"
+#AME_Freedmen_Neutral_Radicalism:0 "The §YFreedmen§! are §Yneutral§! towards radicalism | §Y[?AME.AME_Freedmen_Radicalization]%§!"
+#AME_Freedmen_Radicalized:0 "The §YFreedmen§! are §Rradicalized§! | §R[?AME.AME_Freedmen_Radicalization]%§!"
+#
+#AME_Southerners_Not_Radicalized:0 "The §YSoutherners§! are not §Gradicalized§! | §G[?AME.AME_Dixie_Radicalization]%§!"
+#AME_Southerners_Neutral_Radicalism:0 "The §YSoutherners§! are §Yneutral§! towards radicalism | §Y[?AME.AME_Dixie_Radicalization]%§!"
+#AME_Southerners_Radicalized:0 "The  §YSoutherners§! are §Rradicalized§! | §R[?AME.AME_Dixie_Radicalization]%§!"
 
 AME_Dixie_Support_Government:0 "The £UC_SI_Southerners §YSoutherners§! §Gsupport§! us | §G[?AME.AME_Dixie_Support]%§!"
 AME_Dixie_Neutral_Government:0 "The £UC_SI_Southerners §YSoutherners§! are §Yneutral§! toward us | §Y[?AME.AME_Dixie_Support]%§!"
@@ -697,8 +697,12 @@ PB_AME_Crush_Corporate_America:0 "Crush Corporate America"
 PB_AME_Crush_Corporate_America_desc:0 "As the power and wealth of large corporations continue to grow, many Americans are becoming increasingly concerned about the concentration of economic power and the threat it poses to democracy. In response, a movement has emerged to fight corporate oligarchy and promote greater economic justice. This movement seeks to hold corporations accountable for their actions, promote worker rights and unionization, and advocate for policies that benefit the majority of Americans, rather than just a small elite."
 PB_AME_Renovate_The_Eastern_Seaboard:0 "Renovate The Eastern Seaboard"
 PB_AME_Renovate_The_Eastern_Seaboard_desc:0 "The East Coast of America has always been a hub of economic activity, but recent efforts have focused on expanding industry in the region. From the bustling cities of New York and Boston to the smaller towns along the coast, new factories and manufacturing centers are popping up all over. These efforts are aimed at creating more jobs for workers and providing a boost to the local economy. The construction of new infrastructure such as highways, bridges, and rail lines is also underway, helping to connect the East Coast with other parts of the country and facilitate the movement of goods and people"
+PB_AME_Black_Steel:0 "The Best Black Steel"
+PB_AME_Black_Steel_desc:0 "Other nations in the world might produce more oil then we do but no other nation in the world has our quality. Our refineries produce the most high quality fuel in the world which is highly sought after by the best industries."
+PB_AME_Fair_Education_Act:0 "Fair Education Act"
+PB_AME_Fair_Education_Act_desc:0 "The United Commonwealth is committed to promoting education and research in its universities, recognizing that an educated populace is crucial to the growth and success of the nation. To achieve this goal, the government has increased research funding for universities and provided greater support for literacy programs."
 PB_AME_Bright_Minds_For_A_Bright_America:0 "Bright Minds For A Bright Future"
-PB_AME_Bright_Minds_For_A_Bright_America_desc:0 "The United Commonwealth is committed to promoting education and research in its universities, recognizing that an educated populace is crucial to the growth and success of the nation. To achieve this goal, the government has increased research funding for universities and provided greater support for literacy programs."
+PB_AME_Bright_Minds_For_A_Bright_America_desc:0 "To continue our glory filled path to greatness we can not look back. Scientists form the backbone for our industrial and social revolution, they can never be disregarded. It is critical to expand the Scientific Sector to lay the groundwork for a great future."
 PB_AME_Expand_The_Fleet:0 "Expand The Fleet"
 PB_AME_Expand_The_Fleet_desc:0 "The United Commonwealth recognizes the importance of naval power in maintaining global security and promoting economic interests. As such, it has embarked on an ambitious program to expand its navy, with the goal of becoming one of the world's foremost naval powers. To achieve this, the United Commonwealth has invested heavily in the development of advanced naval technologies and infrastructure, including new ships, submarines, and aircraft carriers. It has also recruited and trained a large number of new sailors, officers, and other naval personnel. The United Commonwealth's expanded navy is expected to play a key role in defending the country's territorial waters, projecting power and influence abroad, and ensuring the safety of its citizens and allies."
 PB_AME_Listen_To_Halsey:0 "Listen To Halsey"
@@ -1984,11 +1988,11 @@ AME_Freedmen_Not_Support_Government_tt:0 "We have §rpoor§! relations with the 
 AME_Unions_Support_Government_tt:0 "We have §Gpositive§! relations with the £UC_SI_Unions §YTrade Unions§!"
 AME_Unions_Not_Support_Government_tt:0 "We have §rpoor§! relations with the £UC_SI_Unions §YTrade Unions§!"
 
-AME_Southerners_Not_Radicalized_tt:0 "£UC_SI_Southerners §YSoutherners§! are §Gnot§! currrently radicalized"
-AME_Southerners_Radicalized_tt:0 "£UC_SI_Southerners §YSoutherners§! are §Rradicalized§!"
-
-AME_Freedmen_Not_Radicalized_tt:0 "£UC_SI_Freedmen §YFreedmen§! are §Gnot§! currrently radicalized"
-AME_Freedmen_Radicalized_tt:0 "£UC_SI_Freedmen §YFreedmen§ are §Rradicalized§!"
+#AME_Southerners_Not_Radicalized_tt:0 "£UC_SI_Southerners §YSoutherners§! are §Gnot§! currrently radicalized"
+#AME_Southerners_Radicalized_tt:0 "£UC_SI_Southerners §YSoutherners§! are §Rradicalized§!"
+#
+#AME_Freedmen_Not_Radicalized_tt:0 "£UC_SI_Freedmen §YFreedmen§! are §Gnot§! currrently radicalized"
+#AME_Freedmen_Radicalized_tt:0 "£UC_SI_Freedmen §YFreedmen§ are §Rradicalized§!"
 
 AME_Peaceniks_Out_of_Power_tt:0 "£UC_SI_Peaceniks The §YPeacenik Lobby§! is §Gnot§! currently empowered"
 AME_Warhawks_in_Power_tt:0 "£UC_SI_Warhawks The §YWarhawk Lobby§! is currently §Gempowered§!"
