--- a/localisation/english/PB_Modifiers_l_english.yml
+++ b/localisation/english/PB_Modifiers_l_english.yml
@@ -4,6 +4,7 @@ ni_drift:0 "Daily Neo-Imperialism Support"
 ds_drift:0 "Daily Despotism Support"
 rc_drift:0 "Daily Reactionary Support"
 cn_drift:0 "Daily Conservative Support"
+an_drift:0 "Daily Anarcho-Liberal Support"
 lb_drift:0 "Daily Liberal Support"
 ss_drift:0 "Daily State Socialist Support"
 jc_drift:0 "Daily Jacobin Support"
@@ -13,6 +14,7 @@ ds_acceptance:0 "Acceptance of Despotism Diplomacy"
 rc_acceptance:0 "Acceptance of Reactionary Diplomacy"
 cn_acceptance:0 "Acceptance of Conservative Diplomacy"
 lb_acceptance:0 "Acceptance of Liberal Diplomacy"
+an_acceptance:0 "Acceptance of Anarcho-Liberal Diplomacy"
 ss_acceptance:0 "Acceptance of State Socialist Diplomacy"
 jc_acceptance:0 "Acceptance of Jacobin Diplomacy"
 
