SOTW mechanic for Prussia

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -55,6 +55,17 @@
   # MECHANICS
   ##########################
 
+  PRS_SOTW_text:0 "[?casualties_k@PRS]k   "
+  PRS_SOTW_tt:0 "[PRS.GetFlag] §HIndependent State of Prussia§! Casualties: [?casualties_k@PRS]k\n\nPer §Y100k§! deaths you will gain a flat §G+2%§! attack and defense buff to all units, up to a maximum of §G+14%§! attack and defense once you hit §Y800k§! casualties. No further rewards will be granted should you surpass §Y800k§! casualties."
+  PB_PRS_Supremacy_Of_The_Will_tt:0 "Unlocks the §HSupremacy Of The Will§! mechanic:\n§gIt is located on your topbar as seen below§!\n\n £GFX_PRS_SOTW_texticon\n\n\n\nPer §Y100k§! deaths you will gain a flat §G+2%§! attack and defense buff to all units, up to a maximum of §G+14%§! attack and defense once you hit §Y800k§! casualties. No further rewards will be granted should you surpass §Y800k§! casualties.\n\nThe §YSOTW§! mechanic will track your losses from the beginning of your campaign however the bonuses will only take affect once you have completed this focus.\n\n"
+  PRS_SOTW_1:0 "Supremacy Of The Will"
+  PRS_SOTW_2:0 "Supremacy Of The Will"
+  PRS_SOTW_3:0 "Supremacy Of The Will"
+  PRS_SOTW_4:0 "Supremacy Of The Will"
+  PRS_SOTW_5:0 "Supremacy Of The Will"
+  PRS_SOTW_6:0 "Supremacy Of The Will"
+  PRS_SOTW_7:0 "Supremacy Of The Will"
+
   PB_PRS_Matters_Of_The_State:0 "Matters Of The State"
   PB_PRS_Matters_Of_The_State_desc:0 "\n\n\n\n\n\nThe Independent State Of Prussia has come a long way since its war of independence against the Russian Empire, yet despite the progress we have made it advancing the capabilities of the state and it's peoples there is still much work to be done."
   PRS_Impending_Royal_Coup:0 "Impending Royal Coup"
