Thiccc Prussia push

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -386,18 +386,14 @@
   PB_PRS_The_Reich_In_A_New_Age_desc:0 ""
   PB_PRS_Revitalize_The_Academy:0 "Revitalize The Academy"
   PB_PRS_Revitalize_The_Academy_desc:0 ""
-  PB_PRS_Europes_Finest_Flyers:0 "Europe's Finest Flyers"
-  PB_PRS_Europes_Finest_Flyers_desc:0 ""
   PB_PRS_Reinforce_The_Baltic_Fleet:0 "Reinforce The Baltic Fleet"
   PB_PRS_Reinforce_The_Baltic_Fleet_desc:0 ""
-  PB_PRS_Operation_Z:0 "Operation Z"
-  PB_PRS_Operation_Z_desc:0 ""
   PB_PRS_Strengthen_The_Battalions:0 "Strengthen The Battalions"
   PB_PRS_Strengthen_The_Battalions_desc:0 ""
-  PB_PRS_Innovative_Technologies:0 "Innovative Technologies"
-  PB_PRS_Innovative_Technologies_desc:0 ""
   PB_PRS_Supremacy_Of_The_Will:0 "Supremacy Of The Will"
   PB_PRS_Supremacy_Of_The_Will_desc:0 ""
+  PB_Placate_The_War_Profiteers:0 "Placate The War Profiteers"
+  PB_Placate_The_War_Profiteers_desc:0 ""
 
   ##########################
   # EVENTS
