Small Prussia push

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -78,6 +78,9 @@
   PRS_Demand_Pommern:0 "Demand Pommern"
   PRS_Demand_Mecklenburg:0 "Demand Mecklenburg"
   PRS_Demand_Ostmark:0 "Demand Ostmark"
+  PRS_Demand_Niederschlesien:0 "Demand Niederschlesien"
+  PRS_Demand_Sachsen:0 "Demand Sachsen"
+  PRS_Annex_Berlin:0 "Annex Berlin"
 
   PB_PRS_The_Origin_Of_Our_Race_tt:0 "\n§gUnlocks the ability to £PRS_shovel §HExcavate§! sites across the globe in the pursuit of creating a state accepted view towards the history of our peoples. You will be able to improve the §YÜbermensch§! spirit through excavations.§!\n\n"
   PB_PRS_Origin_Of_Our_People:0 "Excavation Sites"
@@ -461,6 +464,16 @@
   Prussian.17.a:0 "Give it to them for free."
   Prussian.17.b:0 "Demand Industrial Compensation."
   Prussian.17.c:0 "Not in a thousand years."
+  Prussian.18.t:0 "The Prussians Demand Control of Berlin Territory"
+  Prussian.18.d:0 "" 
+  Prussian.18.a:0 "Give it to them for free."
+  Prussian.18.b:0 "Demand Industrial Compensation."
+  Prussian.18.c:0 "Not in a thousand years."
+  Prussian.19.t:0 "The Prussians Demand Control of Berlin Territory"
+  Prussian.19.d:0 "" 
+  Prussian.19.a:0 "Give it to them for free."
+  Prussian.19.b:0 "Demand Industrial Compensation."
+  Prussian.19.c:0 "Not in a thousand years."
 
   ##########################
   # COSMETIC TAGS
