Prussia Neo-Imp tree is code complete

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -8,6 +8,13 @@
   ##########################
 
   POLITICS_Philipp_Bouhler_DESC:0 "§YBorn:§!03/06/1896\n\n§YPhilipp Bouhler§! nicknamed the counsellor (§ODer Berater§!) has seen Prussia rise from the ashes as a rebirthed nation under Russian influence. A once simple farm boy turned solider during the great war he has seen the world at its quietest and loudest moments, serving in the Russian 3rd cavalry regiment. A regiment compromised of a Prussian majority that would soon turn against their forefathers in the Prussian war for independence during 1921. A war that proved successful in establishing a independent Prussia of sorts, heavily monitored by the Tsar's right hand.\n\nOriginally a fierce supporter of the democratic republic he soon saw through their antics and gained power through a bloody battle in Königsberg that lasted no longer than two days. Russia, meanwhile, looked with great interest towards Bouhler seeing him as a leader who aligned more towards their views and a possible proponent for a more Russian dominated Prussia. Secretly funding him and his Vaterland Front."
+ 
+  ##########################
+  # ABILITIES
+  ##########################
+
+  PRS_Gas_Defense:0 "Gas Defense"
+  PRS_Gas_Attack:0 "Gas Attack"
 
   ##########################
   # TRAITS
@@ -25,6 +32,7 @@
   PB_Resilient_To_The_Cold:0 "Resilient to the Cold"
   PB_Father_of_All_Germans:0 "Father Of All Germans"
   PB_Father_of_All_Germans_tt:0 "  - §RDeath Before Dishonour!§!"
+  trait_PRS_Son_Of_The_Reich:0 "Son Of The Reich"
 
   ##########################
   # STATE MODIFIERS
@@ -50,6 +58,8 @@
   PB_PRS_Promote_Europeanism_tt:0 "Unlocks:  £GFX_legitimacy   §CEuropean Unity Camps§! occupation law that can only be used in occupied state in Europe.\n\nThis occupation law grants more compliance gain and has a small resistance debuff associated with it.\n\n"
   PB_PRS_The_Reich_In_A_New_Age_tt:0 "The §YPost-War§! tree for Prussia will load. This will replace the old tree so any focuses you haven't completed will be gone for the remainder of this campaign."
   PRS_Demand_state_tt:0 "\nThe is a §Y50/50§! chance that Russia outright accepts our demands, or that they demand industrial compensation in the form of one civilian factory, per state request. The AI will never refuse your demands however there is the option for them to do so if Russia is played by another human player. When they agree to our demands state control will be transfered to us and we will immediately core said state.\n"
+  PB_PRS_Safeguard_Our_Coast_tt:0 "Two §YMarine§! divisions will be raised"
+  PB_PRS_Raise_The_Volksstrum_tt:0 "Five §YVolksstrum§! divisions will be raised with 60% of their starting equipment"
 
   ##########################
   # MECHANICS
@@ -171,6 +181,11 @@
 
   PB_PRS_Industrial_Compensation:0 "Industrial Compensation"
   PB_PRS_RUS_Industrial_Compensation:0 "Industrial Compensation"
+
+  PB_PRS_The_Heart_idea:0 "The Heart"
+  PB_PRS_The_Soul_idea:0 "The Soul"
+  PB_PRS_The_Mind_idea:0 "The Mind"
+  PB_PRS_National_Rebirth:0 "National Rebirth"
 
   ##########################
   # Ministers/Generals/Tech Teams
