Another Prussia push

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -90,11 +90,17 @@
   PB_PRS_Matters_Of_The_State:0 "Matters Of The State"
   PB_PRS_Matters_Of_The_State_desc:0 "\n\n\n\n\n\nThe Independent State Of Prussia has come a long way since its war of independence against the Russian Empire, yet despite the progress we have made it advancing the capabilities of the state and it's peoples there is still much work to be done."
   PRS_Impending_Royal_Coup:0 "Impending Royal Coup"
+  PRS_Impending_Royal_Coup_desc:0 "The old Prussian aristocracy still holds considerable sway within the nation's inner political circles. While most of the nobility have refrained from outright critiquing the Bouhler regime rumours and the occasional odd look from Prussia's remaining princes hints that something odd is at play."
   PRS_Strengthen_Prussonationalism:0 "Strengthen Prussonationalism"
+  PRS_Strengthen_Prussonationalism_desc:0 "Prussonationalism has fed our population with a ready supply of patriotism, it is only natural that we further inject this ideology with greater meaning to solidify our control over the nation."
   PRS_Invite_Spanish_Reactionary_Theorists:0 "Invite Spanish Reactionary Theorists"
+  PRS_Invite_Spanish_Reactionary_Theorists_desc:0 "Let us expand our understanding of far-right political theory by inviting academics from likeminded nations across Europe."
   PRS_Invite_French_Reactionary_Theorists:0 "Invite French Reactionary Theorists"
+  PRS_Invite_French_Reactionary_Theorists_desc:0 "Let us expand our understanding of far-right political theory by inviting academics from likeminded nations across Europe."
   PRS_Invite_Italian_Reactionary_Theorists:0 "Invite Italian Reactionary Theorists"
+  PRS_Invite_Italian_Reactionary_Theorists_desc:0 "Let us expand our understanding of far-right political theory by inviting academics from likeminded nations across Europe."
   PRS_Invite_Russian_Reactionary_Theorists:0 "Invite Russian Reactionary Theorists"
+  PRS_Invite_Russian_Reactionary_Theorists_desc:0 "Let us expand our understanding of far-right political theory by inviting academics from likeminded nations across Europe."
   PRS_Demand_Hinterpommern:0 "Demand Hinterpommern"
   PRS_Demand_Pommern:0 "Demand Pommern"
   PRS_Demand_Mecklenburg:0 "Demand Mecklenburg"
@@ -103,15 +109,23 @@
   PRS_Demand_Sachsen:0 "Demand Sachsen"
   PRS_Annex_Berlin:0 "Annex Berlin"
   PRS_Reform_The_Kommandos:0 "Reform The Kommandos"
+  PRS_Reform_The_Kommandos_desc:0 "The Kommandos. officially the Reichs-ReiterKommandos, are cavarly units in service by the Prussian state since the nation's earliest days. Comprised of Great War veterans these units make for an effective offensive force or partisan suppresion unit. However, much of their equipment and training methods are dated, if we wish to make the most of these units then a reform program is badly needed."
   PRS_Encourage_Corporatism:0 "Encourage Corporatism"
+  PRS_Encourage_Corporatism_desc:0 "The Prussian state has increasingly relied upon the good graces of domestic and international corporations. By cutting taxes and offering additional business incentives we can further milk this fat cow of capitalism for our own benefit. "
   PRS_Subsidize_The_Agarian_National_Union:0 "Subsidize The Agarian National Union"
+  PRS_Subsidize_The_Agarian_National_Union_desc:0 "The Agrarian National Union is a government sponsored trade union that has, to no surprise, centred its efforts towards Prussia's rural-farmer based citizens, of which there are many. By increasing the funds available to such an organisation, we can expect more eager hands to work the fields of the nation's many farms."
   PRS_Foster_The_Soldier_Spirit:0 "Foster The Solider Spirit"
+  PRS_Foster_The_Soldier_Spirit_desc:0 "The Prussian people are a race well acustomed to the challenges of warfare, we have provided Europe with some of the bravest soldiers throughout history and shall continue to do so for eternity."
   PRS_Support_German_Reds:0 "Support German Reds"
   PRS_Support_German_Veterans:0 "Support German Veterans"
   PRS_Construct_The_Gustav_Gun:0 "Construct The Gustav Gun"
+  PRS_Construct_The_Gustav_Gun_desc:0 "The Gustav Gun is a planned 80-centimetre railway gun developed by Krupp. The Germans have refused to fund this project considering it as nothing more than a waste of funds, however Krupp is in luck as we know the exact regime interested in this sort of weaponry, us. "
   PRS_Expand_The_Baltic_Fleet:0 "Expand The Baltic Fleet"
+  PRS_Expand_The_Baltic_Fleet_desc:0 "The Baltic Fleet is honestly nothing more than a neglected joke, if we wish on contesting a waters in any serious capacity then we need to expand our ship count."
   PRS_Secure_Black_Market_Oil:0 "Secure Black Market Oil"
+  PRS_Secure_Black_Market_Oil_desc:0 "Our fuel reserves are running dangerously low, if we don't do something about it right this second then our whole damn army is going to run at a snails pace."
   PRS_Open_New_Academies:0 "Open New Academies"
+  PRS_Open_New_Academies_desc:0 "Our nation is small, but we cannot let that define our willingness to fight. We may not we a global superpower but we will fight like dogs to secure our position in Europe's changing order."
   PRS_Hold_Military_Parades:0 "Hold State-Wide Military Parades"
   PRS_Stabilize_The_Nation:0 "Stabilize The Nation"
 
